--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,33 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="175"
+    android:viewportHeight="255">
+  <group android:scaleX="0.30882353"
+      android:scaleY="0.45"
+      android:translateX="60.47794"
+      android:translateY="70.125">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
+        android:pathData="M25.42,25.65L1.31,37.69V204.38L101.73,254.41L130.78,239.95V78.2L25.42,25.65ZM109.24,234.09V209.81L44.05,177.65V59.17L22.94,48.78L22.94,190.93L109.24,234.09ZM66.36,164.33V70.29L109.4,91.76V185.89L66.36,164.33Z"
+        android:fillColor="#5489F6"
+        android:fillAlpha="0.964706"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M49.81,13.63L73.85,1.39L174.16,51.42L174.11,218.41L152.92,228.84V65.02L49.81,13.63Z"
+        android:fillColor="#5489F6"
+        android:fillAlpha="0.964706"/>
+    <path
         android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M25.42,25.65L1.31,37.69V204.38L101.73,254.41L130.78,239.95V78.2L25.42,25.65ZM109.24,234.09V209.81L44.05,177.65V59.17L22.94,48.78L22.94,190.93L109.24,234.09ZM66.36,164.33V70.29L109.4,91.76V185.89L66.36,164.33Z"
+        android:strokeAlpha="0.964706"
+        android:fillColor="#00000000"
+        android:fillType="evenOdd"
+        android:strokeColor="#5489F6"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M49.81,13.63L73.85,1.39L174.16,51.42L174.11,218.41L152.92,228.84V65.02L49.81,13.63Z"
+        android:strokeAlpha="0.964706"
+        android:fillColor="#00000000"
+        android:strokeColor="#5489F6"/>
+  </group>
 </vector>
